--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,19 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# Dependências
+node_modules/
+package-lock.json
+
+# Variaveis de ambiente
+.env
+.env.local
+.env.*.local
+
+# Build output
+/dist
+/build
+
+# IDE files
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+
+# Logs
+*.log
+logs/
