--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.22"
+    "typeorm": "^0.3.22",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
@@ -36,6 +37,7 @@
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@types/cors": "^2.8.17"
   }
 }
